--- a/style.css
+++ b/style.css
@@ -10,21 +10,22 @@ body{
 #board td {
     border: 2px solid #808080;
     position: relative;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
 
 #board td:hover::after {
-    background-color: #F4F4F4;
+    background-color: #DCE2E6;
     content: '';
-    height: 10000px;
+    height: 5000px;
     left: 0;
     position: absolute;
-    top: -5000px;
+    top: -1000px;
     width: 100%;
     z-index: -1;
 }
+
 #board td {
     border-radius: 50%;
 }
